journal/test/corpus/basic.txt
================================================================================
Empty journal
================================================================================

--------------------------------------------------------------------------------

(source_file)

================================================================================
Simple transaction
================================================================================

2023-01-01 groceries
    expenses:food        $10
    assets:checking

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (description)
    (posting
      (account
        (account_name))
      (amount))
    (posting
      (account
        (account_name)))))

================================================================================
Transaction with status and code
================================================================================

2023-01-01 * (123) groceries from store
    expenses:food        $10
    assets:checking

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (status)
    (code)
    (description)
    (posting
      (account
        (account_name))
      (amount))
    (posting
      (account
        (account_name)))))

================================================================================
Posting with comment
================================================================================

2023-01-01 groceries
    expenses:food        $10  ; lunch money
    assets:checking          ; main account

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (description)
    (posting
      (account
        (account_name))
      (amount)
      (comment))
    (posting
      (account
        (account_name))
      (comment))))
