journal/test/corpus/cheatsheet-features.txt
================================================================================
Hash comment lines
================================================================================

# This is a hash comment
# Another hash comment

--------------------------------------------------------------------------------

(source_file
  (comment_line)
  (comment_line))

================================================================================
Mixed comment types
================================================================================

# Hash comment
; Semicolon comment

--------------------------------------------------------------------------------

(source_file
  (comment_line)
  (comment_line))

================================================================================
Decimal mark directive
================================================================================

decimal-mark .

--------------------------------------------------------------------------------

(source_file
  (directive))

================================================================================
Payee directive
================================================================================

payee Whole Foods Market

--------------------------------------------------------------------------------

(source_file
  (directive))

================================================================================
Tag directive
================================================================================

tag business-trip

--------------------------------------------------------------------------------

(source_file
  (directive
    (account
      (account_name))))

================================================================================
Include directive
================================================================================

include other.journal

--------------------------------------------------------------------------------

(source_file
  (directive
    (filepath)))

================================================================================
Quoted commodity
================================================================================

2024-01-01 test
    assets:test    10 "Chocolate Frogs"

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (description)
    (posting
      (account
        (account_name))
      (amount))))

================================================================================
Dot date format
================================================================================

2024.01.01 test
    account    $100

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (description)
    (posting
      (account
        (account_name))
      (amount))))

================================================================================
Hash inline comments
================================================================================

2024-01-01 test
    account    $100  # hash comment

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (description)
    (posting
      (account
        (account_name))
      (amount)
      (comment))))
