journal/test/corpus/directives.txt
================================================================================
Account directive
================================================================================

account assets:checking

--------------------------------------------------------------------------------

(source_file
  (directive
    (account
      (account_name))))

================================================================================
Commodity directive
================================================================================

commodity USD

--------------------------------------------------------------------------------

(source_file
  (directive))

================================================================================
Price directive
================================================================================

P 2023-01-01 EUR $1.20

--------------------------------------------------------------------------------

(source_file
  (directive
    (date)
    (commodity)
    (amount)))

================================================================================
Decimal mark directive with period
================================================================================

decimal-mark .

--------------------------------------------------------------------------------

(source_file
  (directive))

================================================================================
Decimal mark directive with comma
================================================================================

decimal-mark ,

--------------------------------------------------------------------------------

(source_file
  (directive))

================================================================================
Payee directive
================================================================================

payee John Doe

--------------------------------------------------------------------------------

(source_file
  (directive))

================================================================================
Tag directive
================================================================================

tag important

--------------------------------------------------------------------------------

(source_file
  (directive
    (account
      (account_name))))

================================================================================
Include directive
================================================================================

include other.journal

--------------------------------------------------------------------------------

(source_file
  (directive
    (filepath)))

================================================================================
Alias directive - simple account alias
================================================================================

alias checking = assets:bank:checking

--------------------------------------------------------------------------------

(source_file
  (directive))

================================================================================
Alias directive - complex account alias
================================================================================

alias exp = expenses:personal:miscellaneous

--------------------------------------------------------------------------------

(source_file
  (directive))

================================================================================
Alias directive - with regex pattern
================================================================================

alias /^(.+):bank:(.+)$/ = assets:$1:$2

--------------------------------------------------------------------------------

(source_file
  (directive))

================================================================================
Multiple directives including alias
================================================================================

account expenses:food
commodity BTC
P 2023-12-25 BTC $45000
decimal-mark ,
payee ABC Store
tag urgent
include shared.journal
alias cash = assets:wallet:cash

--------------------------------------------------------------------------------

(source_file
  (directive
    (account
      (account_name)))
  (directive)
  (directive
    (date)
    (commodity)
    (amount))
  (directive)
  (directive)
  (directive
    (account
      (account_name)))
  (directive
    (filepath))
  (directive))
