journal/test/corpus/number-formatting.txt
================================================================================
Thousands separators - comma style
================================================================================

2023-01-01 Large amounts with commas
    assets:savings    1,234,567.89 USD
    income:lottery

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (description)
    (posting
      (account
        (account_name))
      (amount))
    (posting
      (account
        (account_name)))))

================================================================================
Thousands separators - European dot style
================================================================================

2023-01-01 European number format
    assets:savings    1.234.567,89 EUR
    income:prize

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (description)
    (posting
      (account
        (account_name))
      (amount))
    (posting
      (account
        (account_name)))))

================================================================================
Mixed formatting styles
================================================================================

2023-01-01 Mixed number formats
    assets:account1    1,000.50 USD
    assets:account2    2.000,75 EUR
    expenses:test1    -500.25 GBP
    expenses:test2    -750,50 CHF

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (description)
    (posting
      (account
        (account_name))
      (amount))
    (posting
      (account
        (account_name))
      (amount))
    (posting
      (account
        (account_name))
      (amount))
    (posting
      (account
        (account_name))
      (amount))))

================================================================================
Large numbers with multiple comma separators
================================================================================

2023-01-01 Very large amounts
    assets:investment    10,000,000.00 USD
    assets:property    1,500,000.50 USD
    liability:mortgage    -11,500,000.50 USD

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (description)
    (posting
      (account
        (account_name))
      (amount))
    (posting
      (account
        (account_name))
      (amount))
    (posting
      (account
        (account_name))
      (amount))))

================================================================================
Large numbers with multiple dot separators
================================================================================

2023-01-01 European large amounts
    assets:investment    10.000.000,00 EUR
    assets:property    1.500.000,50 EUR
    liability:mortgage    -11.500.000,50 EUR

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (description)
    (posting
      (account
        (account_name))
      (amount))
    (posting
      (account
        (account_name))
      (amount))
    (posting
      (account
        (account_name))
      (amount))))

================================================================================
Scientific notation with thousands separators
================================================================================

2023-01-01 Mixed complex formatting
    assets:complex    1,234.56e3 USD
    assets:european    2.345,67E-2 EUR
    expenses:test    -1,000e5 USD

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (description)
    (posting
      (account
        (account_name))
      (amount))
    (posting
      (account
        (account_name))
      (amount))
    (posting
      (account
        (account_name))
      (amount))))
