journal/test/corpus/number-parsing-errors.txt
================================================================================
Multiple consecutive separators - commas
:error
================================================================================

2023-01-01 Invalid number test
    account    1,,234 USD

--------------------------------------------------------------------------------

(ERROR)

================================================================================
Multiple consecutive separators - periods
:error
================================================================================

2023-01-01 Invalid number test
    account    1..234 USD

--------------------------------------------------------------------------------

(ERROR)

================================================================================
Multiple consecutive separators - mixed
:error
================================================================================

2023-01-01 Invalid number test
    account    1,.234 USD

--------------------------------------------------------------------------------

(ERROR)

================================================================================
Trailing separator after decimal - comma
:error
================================================================================

2023-01-01 Invalid number test
    account    .5, USD

--------------------------------------------------------------------------------

(ERROR)

================================================================================
Trailing separator after decimal - period
:error
================================================================================

2023-01-01 Invalid number test
    account    ,5. USD

--------------------------------------------------------------------------------

(ERROR)

================================================================================
Invalid mixed separators pattern
:error
================================================================================

2023-01-01 Invalid number test
    account    1,000.000.5 USD

--------------------------------------------------------------------------------

(ERROR)

================================================================================
Scientific notation with space separators
:error
================================================================================

2023-01-01 Invalid number test
    account    1 000e5 USD

--------------------------------------------------------------------------------

(ERROR)

================================================================================
Invalid decimal mark placement
:error
================================================================================

2023-01-01 Invalid number test
    account    1.000.5.00 USD

--------------------------------------------------------------------------------

(ERROR)

================================================================================
Excessive trailing digits with spaces
:error
================================================================================

2023-01-01 Invalid number test
    account    1 234 567 890 123 USD

--------------------------------------------------------------------------------

(ERROR)

================================================================================
Empty number
:error
================================================================================

2023-01-01 Invalid number test
    account     USD

--------------------------------------------------------------------------------

(ERROR)

================================================================================
Only separator no digits
================================================================================

2023-01-01 Invalid number test
    account    , USD

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (description)
    (posting
      (account
        (account_name))
      (amount))))

================================================================================
Only period no digits
================================================================================

2023-01-01 Invalid number test
    account    . USD

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (description)
    (posting
      (account
        (account_name))
      (amount))))

================================================================================
Invalid character in number
:error
================================================================================

2023-01-01 Invalid number test
    account    12a34 USD

--------------------------------------------------------------------------------

(ERROR)

================================================================================
Multiple signs
:error
================================================================================

2023-01-01 Invalid number test
    account    --123 USD

--------------------------------------------------------------------------------

(ERROR)

================================================================================
Sign after number
:error
================================================================================

2023-01-01 Invalid number test
    account    123- USD

--------------------------------------------------------------------------------

(ERROR)

================================================================================
Invalid scientific notation - no digits after e
:error
================================================================================

2023-01-01 Invalid number test
    account    123e USD

--------------------------------------------------------------------------------

(ERROR)

================================================================================
Invalid scientific notation - multiple e
:error
================================================================================

2023-01-01 Invalid number test
    account    123e5e10 USD

--------------------------------------------------------------------------------

(ERROR)

================================================================================
Invalid scientific notation - decimal in exponent
:error
================================================================================

2023-01-01 Invalid number test
    account    123e5.5 USD

--------------------------------------------------------------------------------

(ERROR)

================================================================================
Scientific notation with space in exponent
:error
================================================================================

2023-01-01 Invalid number test
    account    123e 5 USD

--------------------------------------------------------------------------------

(ERROR)

================================================================================
Mixed space types in thousands separators
:error
================================================================================

2023-01-01 Invalid number test
    account    1 000 000 USD

--------------------------------------------------------------------------------

(ERROR)

================================================================================
Invalid Unicode in number
:error
================================================================================

2023-01-01 Invalid number test
    account    1２3 USD

--------------------------------------------------------------------------------

(ERROR)

================================================================================
Malformed pure decimal - multiple separators
:error
================================================================================

2023-01-01 Invalid number test
    account    .,5 USD

--------------------------------------------------------------------------------

(ERROR)

================================================================================
Scientific notation case sensitivity error
:error
================================================================================

2023-01-01 Invalid number test
    account    123D5 USD

--------------------------------------------------------------------------------

(ERROR)

================================================================================
Invalid exponent separator
:error
================================================================================

2023-01-01 Invalid number test
    account    123x5 USD

--------------------------------------------------------------------------------

(ERROR)

================================================================================
Scientific notation with thousands in base and exponent
:error
================================================================================

2023-01-01 Invalid number test
    account    1,234e1,000 USD

--------------------------------------------------------------------------------

(ERROR)
