journal/test/corpus/periodic-transactions.txt
================================================================================
Monthly periodic transaction
================================================================================

~ monthly rent
    expenses:rent    $1200

--------------------------------------------------------------------------------

(source_file
  (transaction
    (interval)
    (description)
    (posting
      (account
        (account_name))
      (amount))))

================================================================================
Weekly periodic transaction
================================================================================

~ weekly groceries
    expenses:food    $100

--------------------------------------------------------------------------------

(source_file
  (transaction
    (interval)
    (description)
    (posting
      (account
        (account_name))
      (amount))))

================================================================================
Every N periods
================================================================================

~ every 2 weeks salary
    income:salary    $2500

--------------------------------------------------------------------------------

(source_file
  (transaction
    (interval)
    (description)
    (posting
      (account
        (account_name))
      (amount))))

================================================================================
Periodic transaction with status
================================================================================

~ monthly * bills
    expenses:utilities    $200

--------------------------------------------------------------------------------

(source_file
  (transaction
    (interval)
    (status)
    (description)
    (posting
      (account
        (account_name))
      (amount))))

================================================================================
Simple period expression
================================================================================

~ daily backup
    expenses:backup    $5

--------------------------------------------------------------------------------

(source_file
  (transaction
    (interval)
    (description)
    (posting
      (account
        (account_name))
      (amount))))
