journal/test/corpus/transactions.txt
================================================================================
Transaction with only date
================================================================================

2023-01-01
    account    $10

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (posting
      (account
        (account_name))
      (amount))))

================================================================================
Transaction with status only
================================================================================

2023-01-01 *
    account    $10

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (status)
    (posting
      (account
        (account_name))
      (amount))))

================================================================================
Transaction with code only
================================================================================

2023-01-01 (123)
    account    $10

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (code)
    (posting
      (account
        (account_name))
      (amount))))

================================================================================
Transaction with status and code
================================================================================

2023-01-01 * (ABC123)
    account    $10

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (status)
    (code)
    (posting
      (account
        (account_name))
      (amount))))

================================================================================
Transaction with urgent status
================================================================================

2023-01-01 ! urgent payment
    account    $10

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (status)
    (description)
    (posting
      (account
        (account_name))
      (amount))))

================================================================================
Transaction with empty code
================================================================================

2023-01-01 () test
    account    $10

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (code)
    (description)
    (posting
      (account
        (account_name))
      (amount))))

================================================================================
Long description
================================================================================

2023-01-01 This is a very long transaction description with many words
    account    $10

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (description)
    (posting
      (account
        (account_name))
      (amount))))
