journal/test/corpus/unicode-accounts.txt
================================================================================
Unicode account names - Chinese
================================================================================

2023-01-01 中文账户测试
    资产:银行账户    1000 CNY
    收入:工资

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (description)
    (posting
      (account
        (account_name))
      (amount))
    (posting
      (account
        (account_name)))))

================================================================================
Unicode account names - Japanese
================================================================================

2023-01-01 日本語のアカウント
    資産:銀行口座    100000 JPY
    収入:給与

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (description)
    (posting
      (account
        (account_name))
      (amount))
    (posting
      (account
        (account_name)))))

================================================================================
Unicode account names - Arabic
================================================================================

2023-01-01 حساب عربي
    الأصول:البنك    500 SAR
    الدخل:الراتب

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (description)
    (posting
      (account
        (account_name))
      (amount))
    (posting
      (account
        (account_name)))))

================================================================================
Unicode account names - Russian
================================================================================

2023-01-01 Русский счет
    активы:банк    10000 RUB
    доходы:зарплата

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (description)
    (posting
      (account
        (account_name))
      (amount))
    (posting
      (account
        (account_name)))))

================================================================================
Unicode account names - Greek
================================================================================

2023-01-01 Ελληνικός λογαριασμός
    περιουσιακά:τράπεζα    1000 EUR
    έσοδα:μισθός

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (description)
    (posting
      (account
        (account_name))
      (amount))
    (posting
      (account
        (account_name)))))

================================================================================
Mixed Unicode and ASCII
================================================================================

2023-01-01 Mixed account test
    assets:国際銀行:main    1000 USD
    expenses:café_français    -50 EUR
    income:salary_收入

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (description)
    (posting
      (account
        (account_name))
      (amount))
    (posting
      (account
        (account_name))
      (amount))
    (posting
      (account
        (account_name)))))

================================================================================
Unicode with numbers and symbols
================================================================================

2023-01-01 Unicode with numbers
    资产1:银行_账户    1000 CNY
    支出2:咖啡/茶    -20 CNY

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (description)
    (posting
      (account
        (account_name))
      (amount))
    (posting
      (account
        (account_name))
      (amount))))
